tests/NormalTests/paczka1/fuzzy1/50994693.err
Error in line 2: 7CY S451 68,5
Error in line 1: 85TPsgW0 A813 87,3
Error in line 3: N5snZPW8m64 S216 47,4
Error in line 16: lnYB S216 10,5
Error in line 25: 7CY A813 76,43
Error in line 22: 7CY S216 64,8
Error in line 9: Rz0BlqY5MU S476 24,2
Error in line 20: lnYB S451 63,1
Error in line 29: 7CY A813 215,9
Error in line 35: S476 A813 85,6
Error in line 37: 7CY S476 45,7
